--- a/GestionDeServicio/app/src/main/AndroidManifest.xml
+++ b/GestionDeServicio/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.GestionDeServicio"
         tools:targetApi="31">
         <activity
+            android:name=".Activitys.Conditions.ConditionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
